Fixed paragraph tags with extra spacing at the bottom when inside of an alert.

--- a/docs/components/alert/alert.css
+++ b/docs/components/alert/alert.css
@@ -54,3 +54,7 @@
     text-decoration: underline !important;
     font-style: italic !important;
 }
+
+.alert p:last-of-type {
+    margin-bottom: 0;
+}
